@@ -339,6 +339,11 @@ specifier|final
 name|String
 name|confDir
 decl_stmt|;
+DECL|field|tlogDfsReplication
+specifier|private
+name|Integer
+name|tlogDfsReplication
+decl_stmt|;
 comment|// used internally by tests to track total count of failed tran log loads in init
 DECL|field|INIT_FAILED_LOGS_COUNT
 specifier|public
@@ -511,11 +516,35 @@ argument_list|,
 literal|10
 argument_list|)
 expr_stmt|;
+name|tlogDfsReplication
+operator|=
+operator|(
+name|Integer
+operator|)
+name|info
+operator|.
+name|initArgs
+operator|.
+name|get
+argument_list|(
+literal|"tlogDfsReplication"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|tlogDfsReplication
+operator|==
+literal|null
+condition|)
+name|tlogDfsReplication
+operator|=
+literal|1
+expr_stmt|;
 name|log
 operator|.
 name|info
 argument_list|(
-literal|"Initializing HdfsUpdateLog: dataDir={} defaultSyncLevel={} numRecordsToKeep={} maxNumLogsToKeep={}"
+literal|"Initializing HdfsUpdateLog: dataDir={} defaultSyncLevel={} numRecordsToKeep={} maxNumLogsToKeep={} tlogDfsReplication={}"
 argument_list|,
 name|dataDir
 argument_list|,
@@ -524,6 +553,8 @@ argument_list|,
 name|numRecordsToKeep
 argument_list|,
 name|maxNumLogsToKeep
+argument_list|,
+name|tlogDfsReplication
 argument_list|)
 expr_stmt|;
 block|}
@@ -1006,6 +1037,8 @@ argument_list|,
 literal|null
 argument_list|,
 literal|true
+argument_list|,
+name|tlogDfsReplication
 argument_list|)
 expr_stmt|;
 name|addOldLog
@@ -1612,6 +1645,8 @@ name|newLogName
 argument_list|)
 argument_list|,
 name|globalStrings
+argument_list|,
+name|tlogDfsReplication
 argument_list|)
 decl_stmt|;
 name|tlog
@@ -1771,7 +1806,7 @@ throw|;
 block|}
 block|}
 DECL|method|getLogList
-specifier|private
+specifier|public
 name|String
 index|[]
 name|getLogList
