@@ -234,7 +234,35 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|FileStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|FileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FsStatus
 import|;
 end_import
 
@@ -768,6 +796,135 @@ name|e
 argument_list|)
 throw|;
 block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testReplicationFactor
+specifier|public
+name|void
+name|testReplicationFactor
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|clearIndex
+argument_list|()
+expr_stmt|;
+name|HdfsUpdateLog
+name|ulog
+init|=
+operator|(
+name|HdfsUpdateLog
+operator|)
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getUpdateHandler
+argument_list|()
+operator|.
+name|getUpdateLog
+argument_list|()
+decl_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|addAndGetVersion
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"REP1"
+argument_list|)
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|logList
+init|=
+name|ulog
+operator|.
+name|getLogList
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|ulog
+operator|.
+name|getLogDir
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|boolean
+name|foundRep2
+init|=
+literal|false
+decl_stmt|;
+for|for
+control|(
+name|String
+name|tl
+range|:
+name|logList
+control|)
+block|{
+name|FileStatus
+name|status
+init|=
+name|fs
+operator|.
+name|getFileStatus
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|ulog
+operator|.
+name|getLogDir
+argument_list|()
+argument_list|,
+name|tl
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|status
+operator|.
+name|getReplication
+argument_list|()
+operator|==
+literal|2
+condition|)
+block|{
+name|foundRep2
+operator|=
+literal|true
+expr_stmt|;
+break|break;
+block|}
+block|}
+name|assertTrue
+argument_list|(
+literal|"Expected to find tlogs with a replication factor of 2"
+argument_list|,
+name|foundRep2
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
